--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         userLink.addEventListener("click", (event) => {
             if (window.matchMedia("(max-width: 1020px)").matches) {
                 // redirect to mobile account page
-                window.location.href = "maccount.html";
+                window.location.href = "#";
                 event.preventDefault();
             }
         });
