--- a/index.html
+++ b/index.html
@@ -250,6 +250,12 @@
                     <div class="carousel-item">
                         <img src="public/Resources/slide2.png" class="d-block w-100" alt="Promo Slide 2" style="max-height: 400px; width: 100%;">
                     </div>
+                    <div class="carousel-item">
+                        <img src="public/Resources/slide3.png" class="d-block w-100" alt="Promo Slide 2" style="max-height: 400px; width: 100%;">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="public/Resources/slide4.png" class="d-block w-100" alt="Promo Slide 2" style="max-height: 400px; width: 100%;">
+                    </div>
                     <!-- Add more carousel items as needed -->
                 </div>
             </div>
