update base href

--- a/aboutus.html
+++ b/aboutus.html
@@ -4,12 +4,13 @@
 <head>
 	<title>About Leggo</title>
 	<meta charset="utf-8">
+	<!--#include virtual="base_url.html" -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lemon&display=swap" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@200&display=swap" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 	<link rel="stylesheet" href="public/css/about.css" />
-	<base href="https://localhost/github/leggo/">
+	<!--<base href="https://localhost/github/leggo/">-->
 </head>
 
 <body>
@@ -17,7 +18,7 @@
 
 		<div class="index-nav">
 			<div class="logo">
-				<a href="">Leggo</a>
+				<a href="./">Leggo</a>
 			</div>
 			<nav id="nav-index">
 				<ul>
