--- a/list-flight.html
+++ b/list-flight.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lemon&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@200&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <base href="https://localhost/github/leggo/">
+    <!--<base href="https://localhost/github/leggo/">-->
     <title>Leggo</title>
 </head>
 
@@ -18,8 +18,8 @@
             <div class="logo-white">
                 <nav id="nav3">
                     <ul>
-                        <li><a href="search-flight.html"> &lt; </a></li>
-                        <li><a href="index.html">Leggo</a></li>
+                        <li><a href="./search-flight.html"> &lt; </a></li>
+                        <li><a href="./">Leggo</a></li>
                     </ul>
                 </nav>
             </div>
@@ -166,7 +166,7 @@
                     .then(data => {
                         if (data.error) {
                             console.error(data.error);
-                            window.location.href = 'login.php'; // Redirect in case of error
+                            window.location.href = './login.php'; // Redirect in case of error
                         } else {
                             document.getElementById('usernameLink').textContent = data.username;
                         }
