--- a/mhelp.html
+++ b/mhelp.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-    <base href="https://localhost/github/leggo/">
+    <!--<base href="https://localhost/github/leggo/">-->
     <title>Leggo</title>
 </head>
 
@@ -21,16 +21,16 @@
                 <div class="logo-white">
                     <nav id="nav2">
                         <ul>
-                            <li><a href=""> &lt; </a></li>
-                            <li><a href="">Leggo</a></li>
+                            <li><a href="./"> &lt; </a></li>
+                            <li><a href="./">Leggo</a></li>
                         </ul>
                     </nav>
                 </div>
                 <nav id="nav2">
                     <ul>
                         <li><a href="maccount.html" id="usernameLink">User</a></li>
-                        <li><a href='maccount.html'><i class="material-icons"
-                                    id="material-icons">account_circle</i></a></li>
+                        <li><a href='maccount.html'><i class="material-icons" id="material-icons">account_circle</i></a>
+                        </li>
                     </ul>
                 </nav>
             </div>
