--- a/pay.html
+++ b/pay.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lemon&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@200&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <base href="https://localhost/github/leggo/">
+    <!--<base href="https://localhost/github/leggo/">-->
     <title>Leggo</title>
 </head>
 
@@ -16,7 +16,7 @@
     <div class="bg-purpleRadiant" style="min-width: 0;">
         <div class="index-navv">
             <div class="logoo">
-                <a href="">Leggo</a>
+                <a href="./">Leggo</a>
             </div>
             <nav id="navv-index">
                 <ul>
