--- a/payment.html
+++ b/payment.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-    <base href="https://localhost/github/leggo/">
+    <!--<base href="https://localhost/github/leggo/">-->
     <title>Leggo</title>
 </head>
 
@@ -21,8 +21,8 @@
                 <div class="logo-white">
                     <nav>
                         <ul>
-                            <li><a href=""> &lt; </a></li>
-                            <a href="">Leggo</a>
+                            <li><a href="./"> &lt; </a></li>
+                            <a href="./">Leggo</a>
                         </ul>
                     </nav>
                 </div>
