--- a/search-flight.html
+++ b/search-flight.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lemon&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@200&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <base href="https://localhost/github/leggo/">
+    <!--<base href="https://localhost/github/leggo/">-->
     <title>Leggo</title>
 </head>
 
@@ -18,8 +18,8 @@
             <div class="logo-white">
                 <nav id="nav3">
                     <ul>
-                        <li><a href="index.html"> &lt; </a></li>
-                        <li><a href="index.html">Leggo</a></li>
+                        <li><a href="./"> &lt; </a></li>
+                        <li><a href="./">Leggo</a></li>
                     </ul>
                 </nav>
             </div>
